# sona

./: .gitignore  LICENSE  README.md
.github/workflows/: build-libs.yml  release.yml  test-release.yml
cmd/sona/: commands.go  main.go  parent.go
docs/: ARCHITECTURE.md
internal/audio/: audio.go
internal/server/: api_handlers.go  docs.go  error_codes.go  error_response.go  form_values.go  format.go  format_test.go  server.go  server_test.go
internal/wav/: wav.go
internal/whisper/: devices_test.go  whisper.go  whisper_callbacks_cgo.go  whisper_cgo.go
plans/managed-service/: managed-service_001.md  managed-service_002.md  managed-service_003.md  managed-service_004.md
scripts/: build-libs.py  fetch-headers.py  package-release.py
sonapy/: pyproject.toml
sonapy/examples/: basic.py  srt.py  streaming.py
sonapy/src/sonapy/: __init__.py  client.py  runner.py  sona.py
tests/manual/: test_openai_transcription.py
