[project]
name = "sonapy"
version = "0.1.0"
description = "Python wrapper for the Sona transcription runner"
readme = "README.md"
authors = [
    { name = "thewh1teagle", email = "61390950+thewh1teagle@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = ["httpx>=0.28"]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
